--- a/conference-mvc/src/main/resources/static/index.html
+++ b/conference-mvc/src/main/resources/static/index.html
@@ -5,6 +5,9 @@
     <title>Index</title>
 </head>
 <body>
-    <h1>Other :)</h1>
+<h1>Index</h1>
+<a href="greeting">Greeting</a>
+<a href="registration">Registration</a>
+
 </body>
 </html>
